--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.9.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^8.0.7",
     "react-spinners": "^0.13.8",
