--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^4.9.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^8.0.7",
+    "react-responsive-carousel": "^3.2.23",
     "react-spinners": "^0.13.8",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
