--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-redux": "^8.0.7",
     "react-responsive-carousel": "^3.2.23",
     "react-spinners": "^0.13.8",
+    "react-tooltip": "^5.13.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   },
