--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 API_KEY=680c99274ddab12ffac27271d9445d45
+NEXT_PUBLIC_API_KEY=680c99274ddab12ffac27271d9445d45
 BASE_URL=https://api.themoviedb.org
+NEXT_PUBLIC_BASE_URL=https://api.themoviedb.org
