--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
+    "nprogress": "^0.2.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -37,6 +38,7 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
-    "@tanstack/eslint-plugin-query": "^4.29.9"
+    "@tanstack/eslint-plugin-query": "^4.29.9",
+    "@types/nprogress": "^0.2.0"
   }
 }
