google auth added

--- a/.env
+++ b/.env
@@ -2,3 +2,7 @@ API_KEY=680c99274ddab12ffac27271d9445d45
 NEXT_PUBLIC_API_KEY=680c99274ddab12ffac27271d9445d45
 BASE_URL=https://api.themoviedb.org
 NEXT_PUBLIC_BASE_URL=https://api.themoviedb.org
+
+
+CLIENT_ID= 88109165363-pmgv7577bn2co8j3bhln257akuvqo32r.apps.googleusercontent.com
+CLIENT_SECRET=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
