--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.5",
+    "@react-oauth/google": "^0.11.0",
     "@react-spring/web": "^9.7.2",
     "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query": "^4.29.23",
@@ -24,6 +25,7 @@
     "clsx": "^1.2.1",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "jwt-decode": "^3.1.2",
     "next": "13.4.4",
     "nprogress": "^0.2.0",
     "plaiceholder": "^3.0.0",
