Auto login added

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ NEXT_PUBLIC_BASE_URL=https://api.themoviedb.org
 
 CLIENT_ID= 88109165363-pmgv7577bn2co8j3bhln257akuvqo32r.apps.googleusercontent.com
 CLIENT_SECRET=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
+NEXT_PUBLIC_USER_URL=http://localhost:4000
