--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ NEXT_PUBLIC_BASE_URL=https://api.themoviedb.org
 CLIENT_ID= 999403015017-rodh8011hs8r1l0tjlakeidj4vnu1u53.apps.googleusercontent.com
 CLIENT_SECRET=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
 NEXT_PUBLIC_USER_URL=https://dizzy-dress-wasp.cyclic.app
+# NEXT_PUBLIC_USER_URL=http://localhost:4000
