--- a/package.json
+++ b/package.json
@@ -26,17 +26,21 @@
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "next": "13.4.4",
     "nprogress": "^0.2.0",
     "plaiceholder": "^3.0.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-redux": "^8.0.7",
     "react-responsive-carousel": "^3.2.23",
+    "react-select": "^5.7.4",
     "react-spinners": "^0.13.8",
     "react-tooltip": "^5.13.1",
     "tailwindcss": "3.3.2",
