--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vercel/analytics": "^1.0.1",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "bufferutil": "^4.0.7",
     "clsx": "^1.2.1",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
@@ -43,8 +44,10 @@
     "react-select": "^5.7.4",
     "react-spinners": "^0.13.8",
     "react-tooltip": "^5.13.1",
+    "socket.io-client": "^4.7.2",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "utf-8-validate": "^5.0.10"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^4.29.9",
