--- a/package.json
+++ b/package.json
@@ -25,16 +25,16 @@
     "bufferutil": "^4.0.7",
     "clsx": "^1.2.1",
     "eslint": "8.42.0",
-    "eslint-config-next": "13.4.4",
+    "eslint-config-next": "^13.5.4",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
-    "next": "13.4.4",
+    "next": "^13.5.4",
     "nprogress": "^0.2.0",
     "plaiceholder": "^3.0.0",
     "postcss": "8.4.24",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
     "react-infinite-scroll-component": "^6.1.0",
