--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.1.2",
+    "@emoji-mart/react": "^1.1.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.5",
@@ -24,6 +26,7 @@
     "axios": "^1.4.0",
     "bufferutil": "^4.0.7",
     "clsx": "^1.2.1",
+    "emoji-mart": "^5.5.2",
     "eslint": "8.42.0",
     "eslint-config-next": "^13.5.4",
     "jwt-decode": "^3.1.2",
