--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emoji-mart/react": "^1.1.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@formkit/auto-animate": "^0.8.1",
     "@mui/material": "^5.13.5",
     "@react-oauth/google": "^0.11.0",
     "@react-spring/web": "^9.7.2",
