--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "bufferutil": "^4.0.7",
     "clsx": "^1.2.1",
     "emoji-mart": "^5.5.2",
-    "eslint": "8.42.0",
+    "eslint": "^8.42.0",
     "eslint-config-next": "^14.2.1",
     "framer-motion": "^11.0.28",
     "jwt-decode": "^3.1.2",
@@ -57,6 +57,8 @@
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^4.29.9",
-    "@types/nprogress": "^0.2.0"
+    "@types/nprogress": "^0.2.0",
+    "@typescript-eslint/eslint-plugin": "^7.7.0",
+    "@typescript-eslint/parser": "^7.7.0"
   }
 }
