--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "showmania",
-  "version": "0.1.1",
+  "version": "1.0.0-0",
   "private": true,
   "scripts": {
     "release": "release-it",
