--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "lint": "next lint",
     "prepare": "husky"
   },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
   "realease-it": {
     "git": {
       "commitMessage": "chore(release): v${version}"
@@ -89,6 +94,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.2.2",
     "@commitlint/config-conventional": "^19.2.2",
+    "@commitlint/config-lerna-scopes": "^19.0.0",
     "@release-it/conventional-changelog": "^8.0.1",
     "@tanstack/eslint-plugin-query": "^4.29.9",
     "@types/nprogress": "^0.2.0",
