chore: update app_location in Azure Static Web Apps workflow

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "lint": "next lint",
     "prepare": "husky"
   },
+  "engines": {
+    "node": ">=16.0.0 <18"
+  },
   "commitlint": {
     "extends": [
       "@commitlint/config-conventional"
