--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "prepare": "husky"
   },
   "engines": {
-    "node": ">=16.0.0 <18"
+    "node": ">18"
   },
   "commitlint": {
     "extends": [
